# junction-2020-gubbet-koodaa

./: .gitignore  README.md
flask-backend/: app.py  index.html  requirements.txt  server.py
flask-backend/static/: record.js
listener-backend/: player_command.py  player_map.py  requirements.txt  server.py
listener-backend/audio_control/: controller.py  model.mdl  positional_encoding.py  transformer_model.py
listener-backend/server/: __init__.py  factory.py  protocol.py
maze/: Cargo.toml
maze/src/: app.rs  custom_events.rs  direction.rs  game.rs  gui.rs  main.rs  maze.rs  window.rs
misc/flask-backend/: app.py  index.html
misc/flask-backend/static/: record.js  styles.css
misc/speech_recognition/: requirements.tx
misc/speech_recognition/test_audio/: 1.m4a  2.m4a  3.m4a  4.m4a  test.m4a
misc/speech_recognition/transformer/: audio_loader.ipynb  audio_processing.ipynb  audio_record.ipynb  audio_train.py  best_model_eval.mdl  labels.csv  reduced_data.csv  train.py  train_data.csv
rust-frontend/: README.md
speech_recognition/: digits.csv  requirements.tx
speech_recognition/transformer/: audio_loader.ipynb  audio_processing.ipynb  audio_record.ipynb  audio_train.py  best_model.mdl  filterbank_dataset.py  reduced_data_100noise.csv  train.py  transformer_model.py
